@@ -110,7 +110,7 @@ This Work includes contributions authored by David E. Jones, not as a
         <field name="artifactName" type="text-medium"/>
         <field name="artifactTypeEnumId" type="id"/>
         <field name="authzActionEnumId" type="id"/>
-        <field name="userId" type="id-very-long"/>
+        <field name="userId" type="id-long"/>
         <field name="failureDate" type="date-time"/>
         <field name="isDeny" type="text-indicator"/>
         <relationship type="one" title="ArtifactType" related-entity-name="moqui.basic.Enumeration">
@@ -214,7 +214,7 @@ This Work includes contributions authored by David E. Jones, not as a
 
     <!-- ========== User ========== -->
     <entity entity-name="UserAccount" package-name="moqui.security">
-        <field name="userId" type="id-very-long" is-pk="true"/>
+        <field name="userId" type="id-long" is-pk="true"/>
         <field name="username" type="text-medium" enable-audit-log="true">
             <description>The username used along with the password to login</description>
         </field>
@@ -232,7 +232,7 @@ This Work includes contributions authored by David E. Jones, not as a
         <field name="currencyUomId" type="id"/>
         <field name="locale" type="text-short"/>
         <field name="timeZone" type="id-long"/>
-        <field name="externalUserId" type="id-very-long"/>
+        <field name="externalUserId" type="id-long"/>
         <field name="emailAddress" type="text-medium">
             <description>The email address to use for forgot password emails and other system messages.</description>
         </field>
@@ -252,7 +252,7 @@ This Work includes contributions authored by David E. Jones, not as a
     </entity>
     <entity entity-name="UserGroupMember" package-name="moqui.security" cache="true">
         <field name="userGroupId" type="id" is-pk="true"/>
-        <field name="userId" type="id-very-long" is-pk="true"/>
+        <field name="userId" type="id-long" is-pk="true"/>
         <field name="fromDate" type="date-time" is-pk="true"/>
         <field name="thruDate" type="date-time"/>
         <relationship type="one" related-entity-name="moqui.security.UserGroup"/>
@@ -262,7 +262,7 @@ This Work includes contributions authored by David E. Jones, not as a
     </entity>
     <entity entity-name="UserGroupPermission" package-name="moqui.security" cache="true">
         <field name="userGroupId" type="id" is-pk="true"/>
-        <field name="userPermissionId" type="id-very-long" is-pk="true"/>
+        <field name="userPermissionId" type="id-long" is-pk="true"/>
         <field name="fromDate" type="date-time" is-pk="true"/>
         <field name="thruDate" type="date-time"/>
         <relationship type="one" related-entity-name="moqui.security.UserGroup"/>
@@ -283,7 +283,7 @@ This Work includes contributions authored by David E. Jones, not as a
         <alias name="permissionThruDate" entity-alias="UGP" field="thruDate"/>
     </view-entity>
     <entity entity-name="UserLoginHistory" package-name="moqui.security" cache="never">
-        <field name="userId" type="id-very-long" is-pk="true"/>
+        <field name="userId" type="id-long" is-pk="true"/>
         <field name="fromDate" type="date-time" is-pk="true"/>
         <field name="thruDate" type="date-time"/>
         <field name="visitId" type="id"/>
@@ -294,7 +294,7 @@ This Work includes contributions authored by David E. Jones, not as a
         </relationship>
     </entity>
     <entity entity-name="UserPasswordHistory" package-name="moqui.security" cache="never">
-        <field name="userId" type="id-very-long" is-pk="true"/>
+        <field name="userId" type="id-long" is-pk="true"/>
         <field name="fromDate" type="date-time" is-pk="true"/>
         <field name="password" type="text-medium" encrypt="true"/>
         <relationship type="one-nofk" related-entity-name="moqui.security.UserAccount">
@@ -302,12 +302,12 @@ This Work includes contributions authored by David E. Jones, not as a
         </relationship>
     </entity>
     <entity entity-name="UserPermission" package-name="moqui.security">
-        <field name="userPermissionId" type="id-very-long" is-pk="true"/>
+        <field name="userPermissionId" type="id-long" is-pk="true"/>
         <field name="description" type="text-medium"/>
     </entity>
     <entity entity-name="UserPreference" package-name="moqui.security">
         <description>Use this entity for user-specific preferences (or properties). For default preferences use userId="_NA_".</description>
-        <field name="userId" type="id-very-long" is-pk="true"/>
+        <field name="userId" type="id-long" is-pk="true"/>
         <field name="preferenceKey" type="text-medium" is-pk="true"/>
         <field name="preferenceValue" type="text-long"/>
         <relationship type="one-nofk" related-entity-name="moqui.security.UserAccount">
@@ -323,7 +323,7 @@ This Work includes contributions authored by David E. Jones, not as a
         </seed-data>
     </entity>
     <entity entity-name="UserScreenTheme" package-name="moqui.security" authorize-skip="view">
-        <field name="userId" type="id-very-long" is-pk="true"/>
+        <field name="userId" type="id-long" is-pk="true"/>
         <field name="screenThemeTypeEnumId" type="id" is-pk="true"/>
         <field name="screenThemeId" type="id"/>
         <relationship type="one-nofk" related-entity-name="moqui.security.UserAccount">
