@@ -35,11 +35,15 @@ This release includes:
   minimal because you can just select the relevant fields and not worry
   about tables being joined in to the query that are not needed; this makes
   it much easier to write queries that will run well on large databases
-- Added more support for configuring case-insensitive order-by
+- More support for configuring case-insensitive order-by
+- Support for java.util.UUID sequenced primary IDs; can be configured
+  per-entity and/or per-datasource
 
 
 Non-backward-compatible changes:
 
+- Removed id-very-long entity field type and increased default length of id
+  type to 40 and id-long type to 255.
 - Changed *SubscreensItem.userId* to *userGroupId* for greater flexibility
   setting up subscreen structures and menus
 -- this is consistent with how other database-driven artifacts are
